tests/org.eclipse.php.core.tests/workspace/errors/php5/invalidAbstractMethod.pdtt
--TEST--
Bug 480280 - No error for non-abstract method with no body
--FILE--
<?php 
class MyClass1 {
    function foo1();

    abstract function foo1();

    abstract function foo1() {
    	$a = 0;
    }
}

abstract class MyClass2 {
    function foo1();

    abstract function foo1() {
    	$a = 0;
    }
}
?>
--EXPECT--
[line=5, start=43, end=44] non-abstract method must contain body
[line=7, start=74, end=75] non-abstract class cannot have abstract methods
[line=10, start=81, end=126] abstract method cannot contain body
[line=15, start=175, end=176] non-abstract method must contain body
[line=18, start=182, end=227] abstract method cannot contain body
